--- a/frontend/src/app/core/header/header.view.html
+++ b/frontend/src/app/core/header/header.view.html
@@ -6,9 +6,9 @@
 
     <nav class="navbar navbar-default animated fadeInDown" role="navigation">
         <div class="navbar-adt-wrapper">
-            <div class="container">
+            <!--<div class="container">-->
                 <nav-bar class="navbar-adt"></nav-bar>
-            </div>
+            <!--</div>-->
         </div>
     </nav>
 
