--- a/frontend/src/less/addiction-variables.less
+++ b/frontend/src/less/addiction-variables.less
@@ -232,8 +232,8 @@
 
 @dropdown-bg:                    @adt-bgo;
 @dropdown-border:                @adt-border;
-@dropdown-fallback-border:       #0d1a0d;
-@dropdown-divider-bg:            #0d1a0d;
+@dropdown-fallback-border:       #132613;
+@dropdown-divider-bg:            #132613;
 
 @dropdown-link-active-color:     @brand-primary;
 @dropdown-link-active-bg:        @adt-bg;
