--- a/frontend/src/less/addiction-navbar.less
+++ b/frontend/src/less/addiction-navbar.less
@@ -16,7 +16,7 @@
 */
 .navbar-adt-wrapper {
   display: block;
-  width: 100%;
+  //width: 100%;
   height: 100px;
   margin: auto 200px;
   @media (min-width: @screen-lg-min) {
@@ -42,6 +42,15 @@
   .box-shadow(none);
 }
 
+.navbar-divider {
+  height: 50px;
+  border-bottom: 1px solid @dropdown-divider-bg;
+}
+
+.navbar-padding {
+  padding: 0 15px 0 15px;
+}
+
 .navbar-adt {
   font-family: 'proxima_novasemibold';
   .navbar-nav {
@@ -61,23 +70,27 @@
   q .navbar-avatar {
     padding: 4px;
   }
+
   .navbar-subnav {
     font-family: 'proxima_novaregular';
-    font-size: 18px;
+    font-size: 18px !important;
     text-transform: uppercase;
-    height: 49px;
     padding: 0 5px 0 5px;
-    > li {
+    height: 50px;
+    > li > ul > li {
       border-right: 1px solid @dropdown-divider-bg;
+      height: 50px;
       &:first-child {
         border-left: 1px solid @dropdown-divider-bg;
       }
       > a {
-        padding: 15px;
+        display: block;
+        padding: 12px 15px;
         text-transform: uppercase;
       }
     }
   }
+
   .navbar-icon {
     padding-right: 5px;
     > li > a {
@@ -131,7 +144,7 @@
   }
 }
 .nav > li > a.profile-dropdown-toggle {
-  padding: 10px 0;
+  padding: 5px 0;
   img {
     @media (max-width: @screen-lg-min) {
       width: 30px;
@@ -146,14 +159,14 @@
   list-style: none;
   font-size: 14px;
   text-align: left;
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: rgba(0, 0, 0, 0.0);
   border: none;
   border-radius: 0;
   -webkit-box-shadow: none;
   box-shadow: none;
-  min-width: 250px;
+  min-width: 500px;
   width: 150%;
-  padding: 5px 0;
+  padding: 0;
   margin: 2px 0 0;
   ul {
     display: inline-block;
