--- a/frontend/src/less/addiction-users.less
+++ b/frontend/src/less/addiction-users.less
@@ -14,8 +14,14 @@
   margin-bottom: 5px;
   min-height: 24px;
   .transition(background-color 0.2s);
+
   &:hover {
     background-color: rgba(0,0,0,0.7);
     .transition(background-color 0.2s);
+  }
+
+  &:hover .avatar {
+    opacity: 1;
+    .transition(opacity 0.2s);
   }
 }
