--- a/frontend/src/app/news/views/news.item.view.html
+++ b/frontend/src/app/news/views/news.item.view.html
@@ -29,17 +29,17 @@
 <div class="panel-adt">
     <textarea>Quill placeholder</textarea>
 </div>
-<div class="panel-adt">
+<div class="panel-adt" ng-repeat="comment in vm.detail.comments | orderBy:'-created' track by comment.id">
     <div class="row">
         <div class="col-xs-2">
             <div class="news-img pull-left">
-                <avatar image="{{vm.detail.article.author.avatar}}" color="{{vm.detail.article.author.rank.color}}" width="32px" height="32px"></avatar>
+                <avatar image="{{comment.user.avatar}}" color="{{comment.user.rank.color}}" width="32px" height="32px"></avatar>
             </div>
-            <h3 class="news-member"><username data-ng-bind="vm.detail.article.author.displayName"></username></h3>
-            <span data-ng-bind="vm.detail.article.created | date:'mediumDate'" class="news-muted"></span>
+            <h3 class="news-member"><username data-ng-bind="comment.user.displayName"></username></h3>
+            <span data-ng-bind="comment.created | date:'mediumDate'" class="news-muted"></span>
         </div>
         <div class="col-xs-10">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>{{comment.body}}</p>
         </div>
     </div>
 </div>
