fixed update bug in Donate, fixed angular-loading-bar

--- a/frontend/src/app/core/header/directives/notification.dropdown.view.html
+++ b/frontend/src/app/core/header/directives/notification.dropdown.view.html
@@ -1,7 +1,7 @@
 <li dropdown="true">
 
     <a href="#" dropdown-toggle class="dropdown-toggle">
-        <span class="glyphicon glyphicon-comment" aria-hidden="true"></span>
+        <span class="glyphicon glyphicon-flag" aria-hidden="true"></span>
     </a>
 
     <ul class="dropdown-menu" role="navigation">
