--- a/frontend/src/less/addiction-theme.less
+++ b/frontend/src/less/addiction-theme.less
@@ -15,6 +15,7 @@
 @import "./addiction-awards";
 @import "./addiction-codex";
 @import "./addiction-officer";
+@import "./addiction-loadingbar";
 
 @import "./sidepanel";
 @import "./main";
