hide donation goals when they dont exist

--- a/frontend/src/app/donate/views/donate.view.html
+++ b/frontend/src/app/donate/views/donate.view.html
@@ -1,5 +1,5 @@
 <h1>Donations</h1>
-<div class="panel">
+<div class="panel" ng-if="vm.goals.length > 0">
     <div class="panel-adt">
         <div>
             <h2>Donation Goals</h2>
