--- a/frontend/templates/frontend/index.html
+++ b/frontend/templates/frontend/index.html
@@ -36,11 +36,12 @@
 <side-panel id="rightPanel" visible="rightVisible" alignment="right" class="hidden-xs">
     <activity-list></activity-list>
 </side-panel>
-
+<script type='text/javascript' src='{{ STATIC_URL }}ng-infinite-scroll/jquery.min.js'></script>
 
 {% swampdragon_settings %}
 <script type="text/javascript" src="{% static 'swampdragon/js/dist/swampdragon.js' %}"></script>
 <script type="text/javascript" src="{{ STATIC_URL }}swampdragon/js/dist/datamapper.js"></script>
+
 
 {% block scripts %}
     <script src="{% static 'scripts/vendors.js' %}"></script>
@@ -51,6 +52,7 @@
 {% endblock scripts %}
 
 
+<script type='text/javascript' src='{{ STATIC_URL }}ng-infinite-scroll/ng-infinite-scroll.min.js'></script>
 
 
 </body>
