--- a/frontend/src/app/auth/signin.view.html
+++ b/frontend/src/app/auth/signin.view.html
@@ -1,7 +1,7 @@
 <section class="well">
     <div class="center-form panel">
       <div class="panel-body">
-        <h2 class="text-center">Log in NAGGERS</h2>
+        <h2 class="text-center">Log in</h2>
         <form method="post" ng-submit="vm.login()" name="loginForm" novalidate>
           <div class="form-group has-feedback">
             <input class="form-control input-lg" type="text" name="username" ng-model="vm.credentials.username" placeholder="Username" required autofocus>
@@ -13,7 +13,7 @@
             <span class="ion-key form-control-feedback"></span>
           </div>
 
-          <button type="submit" ng-disabled="loginForm.$invalid" class="btn btn-lg  btn-block btn-success">Log in</button>
+          <button type="submit" ng-disabled="loginForm.$invalid" class="btn btn-lg btn-block btn-success">Log in</button>
 
           <br/>
 
