--- a/frontend/src/less/addiction-activity.less
+++ b/frontend/src/less/addiction-activity.less
@@ -1,7 +1,11 @@
-
+.form-group {
+  margin-bottom: 0;
+}
 
 .activity-list {
   line-height: 1.25;
+  //scrollbar hack
+  height: 90%;
   .transition(background-color 0.2s);
   .activity-date {
     color: @gray-dark;
@@ -16,9 +20,16 @@
   .media {
     padding: 5px 10px 5px 10px;
     margin-top: 0;
+    overflow: initial;
   }
+
   .media-heading {
     margin-bottom: 2px;
+  }
+
+  .feed-image {
+    opacity: 0.8;
+    .transition(opacity 0.2s);
   }
 
   .media:hover {
@@ -28,9 +39,23 @@
       color: @gray-lighter;
       .transition(color 0.2s);
     }
+    .avatar {
+      opacity: 1;
+      .transition(opacity 0.2s);
+    }
+    .feed-image {
+      opacity: 1;
+      .transition(opacity 0.2s);
+    }
   }
 
   .media-left {
     padding-right: 5px;
+  }
+  .feed-avatar {
+    min-width: 50px;
+  }
+  .feed-body {
+    overflow-x: auto;
   }
 }
