--- a/frontend/src/less/addiction-main.less
+++ b/frontend/src/less/addiction-main.less
@@ -125,7 +125,7 @@ ul, ol {
     width: 5px;
     height: 32px;
     position: absolute;
-    top: 0;
+    //top: 0;
     box-shadow: 0 0 40px rgba(0, 0, 0, 0.0);
   }
 }
